[tool.poetry]
name = "crystal-detector"
version = "0.1.0"
description = ""
authors = ["4ytk3 <nuts13718@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.0"
opencv-python = "^4.10.0.84"
matplotlib = "^3.9.2"
scipy = "^1.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
